# CLSelector

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  Device.cpp  Device.h  DeviceContainer.cpp  DeviceContainer.h  Server.cpp  Server.h  configuration.h  main.cpp
MasterNode/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  configuration.h  main.cpp
SubNode/: CMakeLists.txt  Client.h  Server.cpp  Server.h  main.cpp
server/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  main.cpp
